# clickhouse-odbc

./: .appveyor.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CPackLists.txt  Environment.h  LICENSE  MACOS.md  README  README.md  ResultSet.h  Statement.h  attr.cpp  codecov.yml  environment.h  info.cpp  odbc.cpp  release_macos.sh  result_set.cpp  statement.h  ubsan_ignorelist.txt  utils.h
cmake/: arch.cmake  extract_flags.cmake  find_ltdl.cmake  find_nanoodbc.cmake  find_odbc.cmake  find_poco.cmake  find_ssl.cmake  os.cmake  packages.cmake  prevent_in_source_builds.cmake  sanitize.cmake
contrib/: CMakeLists.txt
contrib/double-conversion-cmake/: CMakeLists.txt
contrib/gtest/: CMakeLists.txt
contrib/icu-cmake/: CMakeLists.txt
contrib/libcxx-cmake/: CMakeLists.txt
contrib/libcxxabi-cmake/: CMakeLists.txt
contrib/libunwind-cmake/: CMakeLists.txt
contrib/lz4-cmake/: CMakeLists.txt
contrib/nanodbc-cmake/: CMakeLists.txt
contrib/openssl-cmake/: CMakeLists.txt
contrib/poco/: CMakeLists.txt  LocalChanges.md
contrib/poco/Crypto/: CMakeLists.txt
contrib/poco/Data/: CMakeLists.txt
contrib/poco/Data/ODBC/: CMakeLists.txt
contrib/poco/Foundation/: CMakeLists.txt
contrib/poco/Foundation/include/Poco/: Environment_UNIX.h  EventLogChannel.h  Format.h  SyslogChannel.h  Tuple.h  UUID.h  WindowsConsoleChannel.h
contrib/poco/Foundation/src/: Environment_UNIX.cpp  Environment_WIN32.cpp  EventLogChannel.cpp  Format.cpp  SyslogChannel.cpp  ThreadPool.cpp  WindowsConsoleChannel.cpp
contrib/poco/JSON/: CMakeLists.txt
contrib/poco/JSON/src/: pdjson.c
contrib/poco/Net/: CMakeLists.txt
contrib/poco/Net/include/Poco/Net/: HTTPBufferAllocator.h  HTTPChunkedStream.h  SocketImpl.h
contrib/poco/Net/src/: HTTPChunkedStream.cpp  HTTPClientSession.cpp  SocketImpl.cpp
contrib/poco/NetSSL_OpenSSL/: CMakeLists.txt
contrib/poco/NetSSL_Win/: CMakeLists.txt
contrib/poco/NetSSL_Win/src/: Context.cpp  HTTPSClientSession.cpp  SecureSocketImpl.cpp
contrib/poco/Util/: CMakeLists.txt
contrib/poco/XML/: CMakeLists.txt
contrib/poco/XML/include/Poco/XML/: XML.h
contrib/poco/cmake/: PocoMacros.cmake
contrib/unixodbc-cmake/: CMakeLists.txt
contrib/unixodbc-cmake/darwin_arm64/: unixodbc_conf.h
contrib/unixodbc-cmake/darwin_arm64/private/: config.h
contrib/unixodbc-cmake/darwin_x86_64/: unixodbc_conf.h
contrib/unixodbc-cmake/darwin_x86_64/libltdl/: config.h
contrib/unixodbc-cmake/darwin_x86_64/private/: config.h
contrib/zlib-ng-cmake/: CMakeLists.txt
contrib/zstd-cmake/: CMakeLists.txt
debian/: .pbuilderrc  changelog  clickhouse-odbc.prerm  control  rules
docker/: Dockerfile  Dockerfile.centos7
driver/: CMakeLists.txt  attr.cpp  attributes.cpp  attributes.h  config.cpp  config.h  config_cmake.h.in  connection.cpp  connection.h  descriptor.cpp  descriptor.h  diagnostic_record.h  diagnostics.cpp  diagnostics.h  driver.cpp  driver.h  environment.cpp  environment.h  escape_sequences.cpp  exception.cpp  exception.h  export_symbols.ld  exported_symbols.txt  exported_symbols_darwin.txt  exported_symbols_linux.txt  handles.cpp  info.cpp  ini_defines.h  iostream_debug_helpers.h  log.cpp  log.h  lz4_inflating_input_stream.cpp  lz4_inflating_input_stream.h  main.cpp  object.cpp  object.h  odbc.cpp  odbc.ini  platform.h  read_helpers.cpp  (+14 more)
driver/api/: odbc.cpp  sql_columns_resultset_mutator.cpp  sql_columns_resultset_mutator.h
driver/api/impl/: attr.cpp  handles.cpp  impl.cpp  impl.h  info.cpp
driver/config/: config.cpp  config.h  ini_defines.h
driver/escaping/: CMakeLists.txt  escape_sequences.cpp  escape_sequences.h  function_declare.h  lexer.cpp  lexer.h  lexer_declare.h  string_view.h
driver/format/: ODBCDriver2.cpp  ODBCDriver2.h  RowBinaryWithNamesAndTypes.cpp  RowBinaryWithNamesAndTypes.h
driver/log/: CMakeLists.txt  log.cpp  log.h
driver/platform/: config_cmake.h.in  platform.h  unicode_t.h
driver/platform/win/: clickhouse-odbc.def  clickhouse-odbcw.def  dllmain.cpp  resource.h  resource.rc  setup.cpp
driver/test/: AttributeContainer_ut.cpp  CMakeLists.txt  authentication_it.cpp  buffer_filling_ut.cpp  catalog_functions_it.cpp  client_test_base.h  client_utils.h  column_bindings_it.cpp  common_utils.h  connection_string_ut.cpp  date_utils.h  datetime_it.cpp  error_handling_it.cpp  escape_sequences_ut.cpp  gtest_env.cpp  gtest_main.cpp  lexer_ut.cpp  load_ut.cpp  misc_it.cpp  nano_it.cpp  networking_it.cpp  performance_it.cpp  performance_ut.cpp  result_set_reader.hpp  scalar_functions_it.cpp  sql_compatibility_settings_it.cpp  statement_parameter_binding_ut.cpp  statement_parameter_bindings_it.cpp  statement_parameters_it.cpp  type_conversion_ut.cpp  type_info_it.cpp  type_info_ut.cpp  types_it.cpp  utils_ut.cpp
driver/test/http_server/: TestHTTPServer.cpp  TestHTTPServer.h
driver/ut/: AttributeContainer_test.cpp  CMakeLists.txt  client_test_base.h  client_utils.h  escape_sequences_ut.cpp  gtest_env.cpp  gtest_env.h  gtest_main.cpp  lexer_ut.cpp  load.cpp  load_ut.cpp  main.cpp  nano.cpp  performance_it.cpp  statement_parameters_guid.cpp  statement_parameters_guid_it.cpp  statement_parameters_it.cpp  type_conversion_ut.cpp
driver/utils/: amortized_istream_reader.h  conversion.h  conversion_context.cpp  conversion_context.h  conversion_icu.h  conversion_std.h  object_pool.h  read_helpers.cpp  resize_without_initialization.h  scope_guard.h  sql_encoding.h  string_pool.h  string_view.h  type_info.cpp  type_info.h  type_parser.cpp  type_parser.h  unicode_conv.h  unicode_conv_icu.h  unicode_conv_std.h  unicode_converter.cpp  unicode_converter.h  utils.h
driver/win/: CMakeLists.txt  clickhouse-odbc.def  clickhouse-odbcw.def  dllmain.cpp  export.def  exportw.def  resource.h  resource.rc  setup.cpp  version.h
metrics/: coverage.py
packaging/: License.rtf  RegConfig.patch.wxs  clickhouse-odbc.tdc  clickhouse-odbc.tdc.sample  odbc.ini  odbc.ini.sample  odbcinst.ini.sample
test/: CMakeLists.txt  chmac.sh  deploy_and_run_clickhouse_macos.sh  test.bat  (+13 more)
(+75 files in other folders)
